fix margin of sidenote index on mobile

--- a/themes/hugo-theme-nostyle/assets/css/main.scss
+++ b/themes/hugo-theme-nostyle/assets/css/main.scss
@@ -646,6 +646,7 @@ nav {
 
   .sidenote::before {
     text-decoration: underline;
+    margin-right: 0.5rem;
   }
 
   .sidenote {
